# MultiTaskOIQA

./: .gitattributes  .gitignore  README.md  download_hf.py
oiqa_bpr_vmamba/: MERGE_INTO_FULL_PROJECT.md  README.md  pyproject.toml  single_infer_result.csv  single_infer_result.json
oiqa_bpr_vmamba/.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
oiqa_bpr_vmamba/configs/: cviq_default.yaml  cviq_vit_ablation.yaml  mock_infer_default.yaml
oiqa_bpr_vmamba/configs/.ipynb_checkpoints/: cviq_default-checkpoint.yaml  infer_default-checkpoint.yaml  optimal_infer_default-checkpoint.yaml
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/: __init__.py
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/cli/: build_cviq_manifest.py  common.py  eval_cviq.py  generate_mock_checkpoint.py  infer_single_image.py  infer_single_image_old.py  run_ablation.py  run_full_benchmark.py  run_split_protocols.py  synthesize_degraded_viewports.py  train_cviq.py
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/data/: cviq_dataset.py  degradation.py
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/models/: backbones.py  bs_msfa.py  error_map.py  head.py  network.py
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/training/: losses.py  metrics.py  trainer.py
oiqa_bpr_vmamba/src/oiqa_bpr_vmamba/utils/: opt_eval.py  seed.py  splits.py
oiqa_bpr_vmamba/tests/: test_dataset_filtering.py  test_experiment_helpers.py  test_forward_smoke.py  test_infer_single_image.py  test_manifest_paths.py  test_reporting_exports.py
(+7 files in other folders)
